--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,18 @@ name: Build Infrastructure
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
- 
-  pull_request:
-    branches: [ "main" ]
+  push:
+    branches:
+      - main
 
- 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
-    if: "contains(github.event.head_commit.message, '[#deploy]')"
+
+    if: ${{ !contains(github.event.head_commit.message, '#docs') }}
+
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
