--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
 
-    if: ${{ !contains(github.event.head_commit.message, '#docs') }}
+    if: ${{ contains(github.event.head_commit.message, '#docs') }}
 
 
     # The type of runner that the job will run on
